<resources>
    <string name="app_name">MyDuty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_assignment">Assignment</string>
    <string name="label_detail">Details</string>
    <string name="label_description">Description</string>
    <string name="label_topic">Topic</string>
    <string name="label_course">Course</string>
    <string name="label_deadline">Deadline</string>
    <string name="label_done">Done</string>
</resources>