<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignmentDetailAcitivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_corner_layout"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/label_detail"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_deadline"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:background="@drawable/rounded_corner_layout"
                android:backgroundTint="#B60004"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginBottom="16dp"
                android:text="@string/label_deadline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/details_course"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner_layout"
            android:backgroundTint="#FFFF88"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_course"
            android:textStyle="bold"
          />

        <TextView
            android:id="@+id/details_topic"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/rounded_corner_layout"
            android:backgroundTint="#FFFF88"
            android:text="@string/label_topic"

            app:layout_constraintTop_toBottomOf="@+id/details_course" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/black"

            app:layout_constraintTop_toBottomOf="@+id/details_topic" />

        <TextView
            android:id="@+id/details_description"
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_corner_layout"
            android:backgroundTint="#FFFCA5"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_description"

            app:layout_constraintTop_toBottomOf="@+id/view" />
    </LinearLayout>

    <Button
        android:id="@+id/details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:backgroundTint="#ccff02"
        android:textColor="@color/black"
        android:text="@string/label_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.229" />
</androidx.constraintlayout.widget.ConstraintLayout>